--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>실시간 HTP 데이터 공유 (v3.11)</title>
-    <!-- Favicon Add -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
+    <title>실시간 HTP 데이터 공유 (v3.12)</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" href="https://raw.githubusercontent.com/qogmlwo000/gwj2pickpackhtp/main/Bennett.ico" type="image/x-icon">
+
+    <!-- Open Graph Meta Tags for Link Preview -->
+    <meta property="og:title" content="실시간 HTP 데이터 공유">
+    <meta property="og:description" content="엑셀 파일을 업로드하여 팀원들과 실시간으로 HTP 데이터를 공유하고 분석하세요.">
+    <meta property="og:image" content="https://github.com/qogmlwo000/gwj2pickpackhtp/blob/main/Bennett.png?raw=true">
+    <meta property="og:url" content="https://qogmlwo000.github.io/gwj2pickpackhtp/">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
