--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>실시간 HTP 데이터 공유 (v3.13)</title>
+    <title>GWJ2 PICK & PACK HTP TOOL_Bennett (v1.0.0)</title>
     
     <!-- Favicon -->
     <link rel="icon" href="https://raw.githubusercontent.com/qogmlwo000/gwj2pickpackhtp/main/Bennett.ico" type="image/x-icon">
 
     <!-- Open Graph Meta Tags for Link Preview -->
-    <meta property="og:title" content="실시간 HTP 데이터 공유">
-    <meta property="og:description" content="엑셀 파일을 업로드하여 팀원들과 실시간으로 HTP 데이터를 공유하고 분석하세요.">
+    <meta property="og:title" content="PICK & PACK HTP TOOL_Bennett">
+    <meta property="og:description" content="엑셀 파일을 업로드하여 실시간으로 HTP 데이터를 공유하고 분석하세요.">
     <meta property="og:image" content="https://github.com/qogmlwo000/gwj2pickpackhtp/blob/main/Bennett.png?raw=true">
     <meta property="og:url" content="https://qogmlwo000.github.io/gwj2pickpackhtp/">
 
@@ -867,7 +867,7 @@
                     empDisplay = `👑 ${item.employee}`;
                     empColor = 'text-yellow-300 font-bold';
                 } else if (item.isPerm) {
-                    empDisplay = `📝 ${item.employee}`;
+                    empDisplay = `[계약직] ${item.employee}`;
                     empColor = 'text-cyan-400';
                 }
 
