--- a/index.html
+++ b/index.html
@@ -328,11 +328,15 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
                 <div class="bg-gray-800 p-4 rounded-lg">
                     <h3 class="text-lg font-semibold mb-2 text-white">층별 평균 HTP (집품)</h3>
-                    <canvas id="floor-htp-chart"></canvas>
+                    <div class="relative h-96">
+                        <canvas id="floor-htp-chart"></canvas>
+                    </div>
                 </div>
                 <div class="bg-gray-800 p-4 rounded-lg">
                     <h3 class="text-lg font-semibold mb-2 text-white">팩 종류별 작업량 (포장)</h3>
-                    <canvas id="pack-type-chart"></canvas>
+                    <div class="relative h-96">
+                        <canvas id="pack-type-chart"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
